# cookiecutter-cpp-clion

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  CMakeLists.txt  README.md
{{cookiecutter.project_name}}/include/: {{cookiecutter.project_name}}.hpp
{{cookiecutter.project_name}}/src/: {{cookiecutter.project_name}}.cpp
{{cookiecutter.project_name}}/test/: {{cookiecutter.project_name}}_test.cpp
